select send, open chat cookie

--- a/PIM/static/ngTemplates/app.home.dashboard.html
+++ b/PIM/static/ngTemplates/app.home.dashboard.html
@@ -27,7 +27,6 @@
             </div>
             <div class="row">
               <div class="col-md-12">
-                <!-- <canvas id="bar" class="chart chart-bar" chart-data="data" chart-labels="barlabels"> chart-series="series"</canvas> -->
                 <canvas id="bar" class="chart chart-bar" chart-data="barData" chart-labels="barlabels" chart-series="series" chart-colors="barColours" chart-options="sharesOptions">
                 </canvas>
               </div>
@@ -72,8 +71,11 @@
               <div class="col-md-6">
                 <h4># Of Missed Chats &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
               </div>
-              <div class="col-md-6 text-right">
+              <!-- <div class="col-md-6 text-right">
                 <h4><i class="fa fa-sort-desc fa-lg" style="color:#bcd46e"></i> &nbsp;77.78%</h4>
+              </div> -->
+              <div class="col-md-6 text-right">
+                <h4><i class="fa fa-sort-{{changeInMissedChat.increase?'asc':'desc'}} fa-lg" style="color:#bcd46e"></i> &nbsp;{{changeInMissedChat.percentage.toFixed(2)}}%</h4>
               </div>
             </div>
             <div class="row">
@@ -91,8 +93,11 @@
               <div class="col-md-6">
                 <h4>Average Chat Duration &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
               </div>
-              <div class="col-md-6 text-right">
+              <!-- <div class="col-md-6 text-right">
                 <h4><i class="fa fa-sort-asc fa-lg" style="color:#e85c30"></i> &nbsp;19.44%</h4>
+              </div> -->
+              <div class="col-md-6 text-right">
+                <h4><i class="fa fa-sort-{{changeInAvgChatDur.increase?'asc':'desc'}} fa-lg" style="color:#bcd46e"></i> &nbsp;{{changeInAvgChatDur.percentage.toFixed(2)}}%</h4>
               </div>
             </div>
             <div class="row">
@@ -174,14 +179,6 @@
             </div>
             <div class="row col-md-12">
               <table class="table" style="font-size:18px">
-
-
-                <!-- <tbody>
-                  <tr ng-repeat="agent in agentChatCount" ng-if="agent.user != none">
-                    <td style="border: 0;">{{agent.user | getName}}</td>
-                    <td style="border: 0;">{{agent.count_val}}</td>
-                  </tr>
-                </tbody> -->
                 <thead>
                   <tr style="color:#43c8b0">
                     <th style="border: 0;">Name</th>
@@ -198,44 +195,6 @@
                     <td style="border: 0;">{{alb.rating.toFixed(2)}}</td>
                   </tr>
                 </tbody>
-                <!-- <tbody>
-                  <tr>
-                    <td style="border: 0;">Default</td>
-                    <td style="border: 0;">Defaultson</td>
-                    <td style="border: 0;">Defaultson</td>
-                    <td style="border: 0;">Defaultson</td>
-                  </tr>
-                  <tr>
-                    <td style="border: 0;">Success</td>
-                    <td style="border: 0;">Doe</td>
-                    <td style="border: 0;">Defaultson</td>
-                    <td style="border: 0;">Defaultson</td>
-                  </tr>
-                  <tr>
-                    <td style="border: 0;">Danger</td>
-                    <td style="border: 0;">Moe</td>
-                    <td style="border: 0;">Defaultson</td>
-                    <td style="border: 0;">Defaultson</td>
-                  </tr>
-                  <tr>
-                    <td style="border: 0;">Info</td>
-                    <td style="border: 0;">Dooley</td>
-                    <td style="border: 0;">Defaultson</td>
-                    <td style="border: 0;">Defaultson</td>
-                  </tr>
-                  <tr>
-                    <td style="border: 0;">Warning</td>
-                    <td style="border: 0;">Refs</td>
-                    <td style="border: 0;">Defaultson</td>
-                    <td style="border: 0;">Defaultson</td>
-                  </tr>
-                  <tr>
-                    <td style="border: 0;">Active</td>
-                    <td style="border: 0;">Activeson</td>
-                    <td style="border: 0;">Defaultson</td>
-                    <td style="border: 0;">Defaultson</td>
-                  </tr>
-                </tbody> -->
               </table>
             </div>
           </div>
@@ -243,151 +202,6 @@
       </div>
     </div>
 
-
-
-
-    <!-- <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="info-box bg-aqua">
-          <span class="info-box-icon info-box-faIcon"><i class="fa fa-link"></i></span>
-          <div class="info-box-content">
-            <span class="info-box-text">Direct Messages</span>
-            <span class="info-box-number">163,921</span>
-            <div class="progress">
-              <div class="progress-bar" style="width: 40%"></div>
-            </div>
-            <span class="progress-description">
-              40% Increase in 30 Days
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="info-box bg-green">
-          <span class="info-box-icon info-box-faIcon"><i class="fa fa-thumbs-o-up"></i></span>
-          <div class="info-box-content">
-            <span class="info-box-text">Likes</span>
-            <span class="info-box-number">41,410</span>
-            <div class="progress">
-              <div class="progress-bar" style="width: 70%"></div>
-            </div>
-            <span class="progress-description">
-              70% Increase in 30 Days
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="info-box bg-red">
-          <span class="info-box-icon info-box-faIcon"><i class="fa fa-music"></i></span>
-          <div class="info-box-content">
-            <span class="info-box-text">Downloads</span>
-            <span class="info-box-number">114,381</span>
-            <div class="progress">
-              <div class="progress-bar" style="width: 70%"></div>
-            </div>
-            <span class="progress-description">
-              70% Increase in 30 Days
-            </span>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12">
-        <div class="info-box bg-yellow">
-          <span class="info-box-icon info-box-faIcon"><i class="fa fa-amazon"></i></span>
-          <div class="info-box-content">
-            <span class="info-box-text">Inventory</span>
-            <span class="info-box-number">5,200</span>
-            <div class="progress">
-              <div class="progress-bar" style="width: 50%"></div>
-            </div>
-            <span class="progress-description">
-              50% Increase in 30 Days
-            </span>
-          </div>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-5 col-md-offset-1">
-          <canvas id="line" class="chart chart-line" chart-data="data"
-            chart-labels="labels" chart-legend="true" chart-series="series"
-            chart-click="onClick" >
-          </canvas>
-              </div>
-
-              <div class="col-md-6">
-                <canvas id="doughnut" class="chart chart-doughnut" chart-data="data2" chart-labels="labels2">
-          </canvas>
-              </div>
-
-            </div>
-
-
-
-            <div class="col-lg-2 col-xs-6">
-              <div class="small-box bg-aqua">
-                <div class="inner">
-                  <h3>150</h3>
-                  <p>New Orders</p>
-                </div>
-                <div class="icon">
-                  <i class="fa fa-shopping-cart"></i>
-                </div>
-                <a href="#" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
-              </div>
-            </div>
-            <div class="col-lg-3 col-xs-6">
-              <div class="small-box bg-green">
-                <div class="inner">
-                  <h3>53<sup style="font-size: 20px">%</sup></h3>
-                  <p>Bounce Rate</p>
-                </div>
-                <div class="icon">
-                  <i class="fa fa-bar-chart"></i>
-                </div>
-                <a href="#" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
-              </div>
-            </div>
-            <div class="col-lg-3 col-xs-6">
-              <div class="small-box bg-yellow">
-                <div class="inner">
-                  <h3>44</h3>
-                  <p>User Registrations</p>
-                </div>
-                <div class="icon">
-                  <i class="fa fa-user-plus"></i>
-                </div>
-                <a href="#" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
-              </div>
-            </div>
-            <div class="col-lg-3 col-xs-6">
-              <div class="small-box bg-red">
-                <div class="inner">
-                  <h3>65</h3>
-                  <p>Unique Visitors</p>
-                </div>
-                <div class="icon">
-                  <i class="fa fa-pie-chart"></i>
-                </div>
-                <a href="#" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-          </a>
-              </div>
-            </div> -->
-
-
-
-
-
-
-
   </div>
-
 
 </div>
