--- a/support/static/ngTemplates/app.support.knowledgeBase.modal.html
+++ b/support/static/ngTemplates/app.support.knowledgeBase.modal.html
@@ -69,4 +69,16 @@
       Close
     </button>
   </div>
+
+  <!-- <ul class="tools">
+    <li ng-click="sendSelectedContent()">Send</li>
+  </ul> -->
+
+
+  <ul class='custom-menu'>
+    <li ng-click="sendSelectedContent()">Send</li>
+    <!-- <li>Copy</li> -->
+  </ul>
+
+
 </div>
