--- a/PIM/static/ngTemplates/app.settings.prescript.explore.html
+++ b/PIM/static/ngTemplates/app.settings.prescript.explore.html
@@ -1,6 +1,6 @@
 <div ng-controller="app.settings.prescript.explore">
   <div class="row" style="padding:15px;">
-    <div class="col-md-8 col-md-offset-2">
+    <div ng-if="prescriptPerm" class="col-md-8 col-md-offset-2">
       <form>
         <div class="form-group">
           <label ng-if="prescriptForm.pk">Edit Prescipt:</label>
@@ -23,10 +23,10 @@
               <span>{{p.text}}</span>
             </div>
             <div class="col-md-1">
-              <span ng-if="p.display" class="pull-right" style="cursor:pointer;" ng-click="deletePrescript(p.pk , $index)"  > <i class="fa fa-trash fa-lg" title="Delete"></i> </span>
+              <span ng-if="p.display && prescriptPerm" class="pull-right" style="cursor:pointer;" ng-click="deletePrescript(p.pk , $index)"  > <i class="fa fa-trash fa-lg" title="Delete"></i> </span>
             </div>
             <div class="col-md-1">
-              <span ng-if="p.display" class="pull-right" style="cursor:pointer;" ng-click="editPrescript(p)"  > <i class="fa fa-edit fa-lg" title="Edit"></i> </span>
+              <span ng-if="p.display && prescriptPerm" class="pull-right" style="cursor:pointer;" ng-click="editPrescript(p)"  > <i class="fa fa-edit fa-lg" title="Edit"></i> </span>
             </div>
           </div>
         </div>
