--- a/PIM/static/ngTemplates/app.settings.roles.html
+++ b/PIM/static/ngTemplates/app.settings.roles.html
@@ -1,7 +1,7 @@
 <div ng-controller="app.settings.roles">
 
   <div class="row">
-    <div class="col-md-6">
+    <div ng-if="rolesPerm" class="col-md-6">
       <div class="form-group">
         <h3 ng-if="!roleForm.pk">Create New Role </h3>
         <h3 ng-if="roleForm.pk">Edit Role </h3>
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <div class="col-md-6" style="margin-top:15px;">
+    <div class="{{rolesPerm ? 'col-md-6':'col-md-offset-3 col-md-6' }}" style="margin-top:15px;">
       <div class="row ">
         <div ng-repeat="r in roles">
           <div class="col-md-5 card" style="margin: 0px 30px 20px 0px; background-color:#5555c2; color:white ; border-radius:5px" >
@@ -35,7 +35,7 @@
             <div class="row" style="padding:15px; padding-bottom:0px;">
               <span><b>Applications :</b> <span ng-repeat="a in r.applications track by $index"><span ng-if="$index<=1"> {{a.name.slice(0,15)}} </span><span ng-if="$index==2">...</span><span ng-if="$index<r.applications.length-1 && $index<=1">,</span></span></span>
             </div>
-            <div class="row" style="padding:15px">
+            <div ng-if="rolesPerm" class="row" style="padding:15px">
               <span class="pull-left" style="cursor:pointer; padding-left:5px;" ng-click="deleteRole(r.pk , $index)"> <i class="fa fa-trash fa-lg" title="Delete Role"></i> </span>
               <span class="pull-right" style="cursor:pointer; padding-right:5px;" ng-click="editRole(r)"  > <i class="fa fa-edit fa-lg" title="Edit Role"></i> </span>
             </div>
