--- a/homepage/static/ngTemplates/app.customer.dashboardGraph.html
+++ b/homepage/static/ngTemplates/app.customer.dashboardGraph.html
@@ -39,8 +39,11 @@
             <div class="col-sm-9">
               <h4># Of Missed Chats &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
             </div>
-            <div class="col-sm-3 text-right">
+            <!-- <div class="col-sm-3 text-right">
               <h4><i class="fa fa-sort-desc fa-lg" style="color:#bcd46e"></i> &nbsp;77.78%</h4>
+            </div> -->
+            <div class="col-sm-3 text-right">
+              <h4><i class="fa fa-sort-{{changeInMissedChat.increase?'asc':'desc'}} fa-lg" style="color:#bcd46e"></i> &nbsp;{{changeInMissedChat.percentage.toFixed(2)}}%</h4>
             </div>
           <!-- </div> -->
           <!-- <div class="row"> -->
@@ -56,8 +59,11 @@
             <div class="col-sm-9">
               <h4>Average Chat Duration &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
             </div>
-            <div class="col-sm-3 text-right">
+            <!-- <div class="col-sm-3 text-right">
               <h4><i class="fa fa-sort-asc fa-lg" style="color:#e85c30"></i> &nbsp;19.44%</h4>
+            </div> -->
+            <div class="col-sm-3 text-right">
+              <h4><i class="fa fa-sort-{{changeInAvgChatDur.increase?'asc':'desc'}} fa-lg" style="color:#bcd46e"></i> &nbsp;{{changeInAvgChatDur.percentage.toFixed(2)}}%</h4>
             </div>
           <!-- </div> -->
           <!-- <div class="row"> -->
@@ -105,7 +111,7 @@
               <h4>Average Response Time(ART) &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
             </div>
             <div class="col-sm-3 text-right">
-              <h4><i class="fa fa-sort-asc fa-lg" style="color:#e85c30"></i> &nbsp;38.21%</h4>
+              <h4><i class="fa fa-sort-{{changeInRespTimeAvg.increase?'asc':'desc'}} fa-lg" style="color:#bcd46e"></i> &nbsp;{{changeInRespTimeAvg.percentage.toFixed(2)}}%</h4>
             </div>
           <!-- </div> -->
           <!-- <div class="row"> -->
@@ -127,7 +133,7 @@
               <h4>Average First Response Time(AFRT) &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
             </div>
             <div class="col-sm-3 text-right">
-              <h4><i class="fa fa-sort-desc fa-lg" style="color:#bcd46e"></i> &nbsp;27.75%</h4>
+              <h4><i class="fa fa-sort-{{changeInFrtAvg.increase?'asc':'desc'}} fa-lg" style="color:#bcd46e"></i> &nbsp;{{changeInFrtAvg.percentage.toFixed(2)}}%</h4>
             </div>
           <!-- </div> -->
           <!-- <div class="row"> -->
