--- a/support/static/ngTemplates/app.customers.html
+++ b/support/static/ngTemplates/app.customers.html
@@ -2,7 +2,7 @@
   <breadcrumb></breadcrumb>
   <div class="container-fluid">
     <uib-tabset>
-      <uib-tab>
+      <uib-tab ng-if="createPerm">
         <uib-tab-heading>
           New <i class="fa fa-plus"></i>
         </uib-tab-heading>
