--- a/homepage/static/ngTemplates/app.customer.reviews.html
+++ b/homepage/static/ngTemplates/app.customer.reviews.html
@@ -1,3 +1,33 @@
+<div class="row container-fluid">
+  <div class="col-md-3">
+      <label><b> Select Date</b> </label>
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.date" is-open="status.opened" />
+        <div class="input-group-append">
+          <span><button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="fa fa-calendar" aria-hidden="true"></i></button></span>
+        </div>
+      </div>
+  </div>
+  <div class="col-md-4">
+    <div class="form-group">
+      <label> Visitor Email </label>
+      <input type="email" class="form-control"  placeholder="User E-mail..." ng-model="form.email">
+    </div>
+  </div>
+  <div class="col-md-1" style="padding-top:20px">
+    <div class="btn-group-vertical">
+      <button type="button" class="btn btn-primary" ng-click="filterData()">
+        <strong>Filter</strong>
+      </button>
+      <button type="button" class="btn btn-default" ng-click="download()" ng-if="reviewData.length>0">
+        Download <i class="fa fa-download"></i>
+      </button>
+    </div>
+    <!-- <div class="btn btn-primary btn-block" ng-click="filterData()">
+      <strong>Filter</strong>
+    </div> -->
+  </div>
+</div>
 <uib-tabset>
   <uib-tab active="searchTabActive">
     <uib-tab-heading>
