--- a/HR/static/ngTemplates/app.HR.manage.users.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.html
@@ -8,14 +8,40 @@
         </uib-tab-heading>
         <generic-Form template="'/static/ngTemplates/app.HR.form.newUser.html'" data="newUser" submit-Fn="createUser()" form-title="'Create New User'"></generic-Form>
       </uib-tab>
+
+
+      <uib-tab >
+        <uib-tab-heading>
+          Create Customer
+        </uib-tab-heading>
+        <generic-Form template="'/static/ngTemplates/app.HR.form.createCustomer.html'" data="newUser" submit-Fn="createCustomer()" form-title="'Create New Customer'"></generic-Form>
+      </uib-tab>
+
+
+
+
       <uib-tab active="searchTabActive">
         <uib-tab-heading >
           Search  <i ng-if="tab.cancel" class="fa fa-search"></i>
         </uib-tab-heading>
-
         <generic-Table callback-Fn = "tableAction" data="data.tableData" config-Obj="{{config}}"></generic-Table>
 
       </uib-tab>
+
+
+      <!-- <uib-tab>
+        <uib-tab-heading >
+          Customers  <i ng-if="tab.cancel" class="fa fa-search"></i>
+        </uib-tab-heading>
+
+        <generic-Table callback-Fn = "tableAction" data="data.tableData" config-Obj="{{config}}"></generic-Table>
+
+      </uib-tab> -->
+
+
+
+
+
       <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
         <uib-tab-heading >
           {{tab.title}} <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
