--- a/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
+++ b/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
@@ -110,7 +110,9 @@
           <img ng-src="{{contract.occupancy_screenshort}}" alt="Occupancy Area" height="100px" width="100px">
         </div>
       </div>
-
+<div class="col-md-1">
+  <button type="button" class="btn btn-default btn-md pull-left" ng-click="editQuote()">dshgf</button>
+</div>
     </div>
 
     <!-- <div class="row" style="margin-top:10px;">
