--- a/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
+++ b/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
@@ -108,6 +108,7 @@
         <!-- </div> -->
         <div class="col-md-9 pull-right">
           <img ng-src="{{contract.occupancy_screenshort}}" alt="Occupancy Area" height="100px" width="100px">
+          </button>
         </div>
       </div>
 
