filters and cstmr comment

--- a/HR/static/ngTemplates/app.HR.manage.users.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.html
@@ -29,14 +29,14 @@
       </uib-tab>
 
 
-      <!-- <uib-tab>
+      <uib-tab>
         <uib-tab-heading >
           Customers  <i ng-if="tab.cancel" class="fa fa-search"></i>
         </uib-tab-heading>
 
         <generic-Table callback-Fn = "tableAction" data="data.tableData" config-Obj="{{config}}"></generic-Table>
 
-      </uib-tab> -->
+      </uib-tab>
 
 
 
