--- a/support/static/ngTemplates/app.support.html
+++ b/support/static/ngTemplates/app.support.html
@@ -71,7 +71,7 @@
                       </div>
                       <div class="row">
                         <i class="fa fa-circle" aria-hidden="true" style="color:{{x.isOnline ? '#37a508':'#ff0022'}}"></i><span> {{x.uid}}</span>
-                        <span>( {{x.messages.length}} )</span>
+                        <span ng-if="x.messages.length>0" >( {{x.messages.length}} )</span>
                       </div>
                     </div>
                   </div>
