--- a/warehouse/static/ngTemplates/app.warehouse.commodity.html
+++ b/warehouse/static/ngTemplates/app.warehouse.commodity.html
@@ -3,15 +3,15 @@
     <div class="row">
       <div class="col-md-5">
       <label>Commodity Name</label>
-      <input type="text" class="form-control">
+      <input type="text" class="form-control" ng-model="form.name">
     </div>
       <div class="col-md-5">
       <label>Quantity</label>
-      <input type="number" class="form-control" value="">
+      <input type="number" class="form-control" value="" ng-model="form.qty">
     </div>
       <div class="col-md-2">
         <br/>
-      <button type="button" class="btn btn-primary" ng-click="addCommodities" style="width:100px"> Add </button>
+      <button type="button" class="btn btn-primary" ng-click="addCommodities()" style="width:100px"> Add </button>
     </div>
     </div>
   </div>
