--- a/warehouse/static/ngTemplates/app.warehouse.commodity.html
+++ b/warehouse/static/ngTemplates/app.warehouse.commodity.html
@@ -16,17 +16,29 @@
     </div>
   </div>
 
-  <div class="row">
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>Products</th>
-          <th>Quantity</th>
-        </tr>
-      </thead>
-      <tbody>
-      </tbody>
-    </table>
+  <div class="card">
+    <div class="card">
+      <div class="row">
+        <div class="col-md-5 ">
+          Name
+        </div>
+        <div class="col-md-5">
+          Quantity
+          <span class="pull-right"></span>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Products</th>
+            <th>Quantity</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+      </table>
+     </div>
   </div>
-
 </div>
