--- a/warehouse/static/ngTemplates/app.warehouse.commodity.html
+++ b/warehouse/static/ngTemplates/app.warehouse.commodity.html
@@ -32,24 +32,19 @@
   <div class="row">
     <table class="table table-striped">
       <thead>
-        <tr>
+        <tr class="">
           <th>Products</th>
           <th>Quantity</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <div class="card">
-
-          </div>
-        </tr>
       </tbody>
     </table>
 
   <div class="row">
     <div class="card" ng-repeat="c in comodities" style="padding-bottom:0px;margin-bottom:10px">
       <div class="card">
-        <div class="row" style="padding:10px">
+        <div class="row" style="padding:10px; padding-left:20px;">
           <div class="col-md-5">
             {{c.name}}
           </div>
@@ -63,6 +58,24 @@
       </div>
     </div>
 
+  </div>
+  <div class="text-center">
+    <table class="table table-bordered">
+      <tr>
+        <th class="text-center" >Created</th>
+        <th class="text-center">In</th>
+        <th class="text-center">Out</th>
+        <th class="text-center">Download</th>
+      </tr>
+      <tbody >
+        <tr >
+          <td>ahsba</td>
+          <td>avalj</td>
+          <td>uahvuav</td>
+          <td><i class="fa fa-download"></i></td>
+        </tr>
+      </tbody>
+    </table>
   </div>
 
 </div>
