--- a/warehouse/static/ngTemplates/app.warehouse.commodity.html
+++ b/warehouse/static/ngTemplates/app.warehouse.commodity.html
@@ -19,13 +19,12 @@
         <label>Quantity</label>
         <input type="number" class="form-control" value="" ng-model="form.qty">
       </div>
-      <div class="col-md-2">
-        <br/>
+      <div class="col-md-2" style="padding-top:25px">
         <button type="button" class="btn btn-primary" ng-click="addCommodities()" style="width:100px"> Add </button>
       </div>
     </div>
   </div>
-  <div class="row" style="border-bottom:1px solid grey;padding:5px;">
+  <div class="row" style="padding:5px;">
     <div class="col-md-5">
       <b>Name</b>
     </div>
@@ -36,7 +35,6 @@
       <b>View</b>
     </div>
   </div>
-  <br>
   <div class="row">
     <div class="card" ng-repeat="c in comodities" style="padding-bottom:0px; margin-bottom:10px">
       <div class="card">
