--- a/warehouse/static/ngTemplates/app.warehouse.commodity.html
+++ b/warehouse/static/ngTemplates/app.warehouse.commodity.html
@@ -9,7 +9,7 @@
         <label>Quantity</label>
         <input type="number" class="form-control" value="" ng-model="form.qty">
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 padding-top:30px;">
         <br/>
         <button type="button" class="btn btn-primary" ng-click="addCommodities()" style="width:100px"> Add </button>
       </div>
