--- a/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
+++ b/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="col-md-1" style="padding-top:85px; padding-left:15px;">
-        <button type="button" class="btn btn-default btn-md pull-right" ng-click="addCommodity()"><i class="fa fa-plus"></i> Add</button>
+        <button type="button" class="btn btn-default btn-md pull-right" ng-click="addCommodity()"><i class="fa fa-plus"></i> Commodity</button>
       </div>
     </div>
 
