--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.configImage.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.configure.configImage.html
@@ -18,6 +18,10 @@
           <label>Payment Potrait Image</label>
           <input type="file" file-model="form.paymentPortrait">
         </div>
+        <div class="form-group">
+          <label>Search Background Image</label>
+          <input type="file" file-model="form.searchBgImage">
+        </div>
         <button type="button" class="btn btn-primary" ng-click="addImage()">
           Save
         </button>
