--- a/ecommerce/static/ngTemplates/app.ecommerce.PagesDetails.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.PagesDetails.html
@@ -1,10 +1,50 @@
-<div class="container-fluid">
+<div class="container-fluid" ng-if="typ=='page'">
   <div class="row">
     <div class="col-md-10 col-md-offset-1 card bg-white">
-      <div class="row container-fluid" ng-bind-html = "pageData.body" style="margin-top:20px;">
+      <div class="row container-fluid" ng-bind-html="pageData.body" style="margin-top:20px;">
       </div>
     </div>
   </div>
+</div>
+
+<div class="container-fluid" ng-if="typ=='blog'">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1 bg-white">
+      <div class="col-xs-12" >
+        <span class="btn btn-primary btn-sm" ng-click="$state.go('blog' , {title : 'Blog'.split(' ').join('-').toLowerCase()})" style="margin-top:30px"><i class="fa fa-arrow-left"></i> Go Back</span>
+      </div>
+        <div class="col-xs-12 text-left">
+          <h2 style="font-size:22px;" class="text-primary"> {{blogData.title}}</h2>By <span ng-repeat="u in blogData.users">{{u | getName}}</span><span style="margin-left: 5px;"> | </span><span style="margin-left: 5px;">{{blogData.created | date : 'MMM. dd, yyyy, HH:MM a'}}</span>
+        </div>
+        <div class="col-xs-12" style="margin-top:15px;">
+          <span ng-bind-html="blogData.header"></span>
+          <hr>
+        </div>
+        <div class="col-xs-12" style="background-color:#f2efe8;">
+          <span ng-bind-html="blogData.source"></span>
+        </div>
+    </div>
+  </div>
+
+  <!-- <section style="padding-top: 20px;padding-bottom: 30px;">
+
+    <div class="row" style="padding:20px">
+      <div class="col-xs-12 text-left">
+        <h2 style="font-size:19px;" class="text-primary">{{blogData.title}}</h2> By {{user}} <span style="margin-left: 10px;"> | </span> <span style="margin-left: 10px;">{{blogData.created}}</span>
+      </div>
+      <div class="col-md-3">
+        <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}" class="btn btn-primary pull-right" style="background:rgb(31, 116, 215);" target="_blank">
+          <i class="fa fa-facebook"></i>  Share
+        </a>
+      </div>
+    </div>
+    <div class="container-fluid" style="padding:20px">
+      {{blogData.source}}
+    </div>
+    <div class="row text-center">
+      <div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-width="900" data-numposts="5"></div>
+    </div>
+  </section> -->
 </div>
 
 <!-- <div class="row anim-in-out anim-zoom-out" style="position:fixed; bottom:20px; left:0px;z-index:100;" ng-if="showGoToTop">
