--- a/warehouse/static/ngTemplates/app.warehouse.commodity.html
+++ b/warehouse/static/ngTemplates/app.warehouse.commodity.html
@@ -77,7 +77,7 @@
                   <td>{{s.checkIn}}</td>
                   <td>{{s.checkOut}}</td>
                   <td>{{s.balance}}</td>
-                  <td><i class="fa fa-download"></i></td>
+                  <td><i class="fa fa-download" ng-click="download()"></i></td>
                 </tr>
               </tbody>
             </table>
