--- a/HR/static/ngTemplates/app.HR.manage.users.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.html
@@ -21,7 +21,9 @@
         <uib-tab-heading>
           New Customer
         </uib-tab-heading>
-        <generic-Form template="'/static/ngTemplates/app.HR.form.createCustomer.html'" data="newUser" submit-Fn="createCustomer()" form-title="'Create New Customer'"></generic-Form>
+        <!-- <generic-Form template="'/static/ngTemplates/app.HR.form.createCustomer.html'"  form-title="'Create New Customer'"></generic-Form> -->
+        <div ng-include="'/static/ngTemplates/app.HR.form.createCustomer.html'" ></div>
+
       </uib-tab>
 
 
@@ -58,6 +60,10 @@
         <div ng-if="tab.app == 'viewProfile'">
           <div ng-include="'/static/ngTemplates/app.HR.manage.users.explore.html'"></div>
         </div>
+        <div ng-if="tab.app == 'editCustomerForm'">
+          <div ng-include="'/static/ngTemplates/app.HR.form.createCustomer.html'" data="tab.data" ></div>
+        </div>
+
       </uib-tab>
     </uib-tabset>
   </div>
