--- a/ecommerce/static/ngTemplates/app.ecommerce.details.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.details.html
@@ -285,7 +285,7 @@
         </div>
       </div>
     </div>
-    <div class="row" style="margin:0px;" ng-if="me != null">
+    <div class="row" style="margin:0px;" >
       <div class=" col-md-10 hidden-xs hidden-sm" style="padding:40px; padding-top:0px;width:100%">
           <h4>Suggested Products</h4>
           <div class="row">
